--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "mongodb": "^6.5.0",
     "next": "14.1.3",
+    "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
