--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.3",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
